# Access_control

./: CMakeLists.txt  DescriptionFile.csv  LogFile.txt  ProjetAP4_CeliaJournet.drawio  README.md  Rapport_AP4A_TP1B_Journet_Celia.docx  UML_AP4A_TP1B_Journet_Celia.drawio  main.cpp  ~$pport_AP4A_TP1B_Journet_Celia.docx  ~WRL0003.tmp
Projet2025/: CMakeLists.txt  DescriptionFile.csv  LogFile.txt  ProjetAP4_CeliaJournet.drawio  main.cpp
Projet2025/include/: Badge.h  LecteurBadge.h  Personne.h  Scheduler.h  Serveur.h
Projet2025/src/: Badge.cpp  LecteurBadge.cpp  Professeur.cpp  Scheduler.cpp  Serveur.cpp
include/: Admin.h  Badge.h  Chercheur.h  Eleve.h  HeritageBadge.h  HeritageLecteur.h  HeritagePersonne.h  LecteurBadge.h  Personne.h  Professeur.h  Scheduler.h  Securite.h  Serveur.h
src/: Badge.cpp  HeritageBadge.cpp  LecteurBadge.cpp  Personne.cpp  Scheduler.cpp  Serveur.cpp
